--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Indecision App</title>
+    <title>Bobcat Courses</title>
   </head>
   <body>
     <div id="app"></div>
