--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bobcat Courses</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
