--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="app"></div>
     <script src="bundle.js"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
   </body>
 </html>
