--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,10 @@
     <div id="app"></div>
     <script src="bundle.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
+    <script type="text/javascript">
+      window.onbeforeunload = function() {
+        sessionStorage.clear();
+      }
+    </script>
   </body>
 </html>
